2008-12-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Eliminate pointers to API configuration tables in the
	main configuration table. Reference the main configuration table and
	the API configuration tables directly using the confdefs.h version
	rather than obtaining a pointer to it. This eliminated some
	variables, a potential fatal error, some unnecessary default
	configuration structures. Overall, about a 4.5% reduction in the code
	size for minimum and hello on the SPARC.

2008-12-11	Ralf Corsepius <ralf.corsepius@rtems.org>

	* clock_driver_stub.c: Remove (unused).

2008-10-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock_driver_simidle.c: Ensure ISR nest level and Thread Dispatch
	disable level are in the same state they would be in a true ISR. This
	ensures that all of the clock tick handling is as similar as possible
	in this limited environment.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/tm27.h: Use shared tm27.h stub.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c, bspgetworkarea.c, bsppretaskinghook.c,
	include/bootcard.h: Change size_t to ssize_t on bsp_get_work_area().
	On 16-bit architectures, size_t can be 16-bits which would limit the
	work area to 64K.

2008-09-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: Renamed various macros.

2008-09-30	Ralf Corsepius <ralf.corsepius@rtems.org>

	* clockdrv_shell.c: Empty file. Add warning to not use this file.
	* clock_driver_simidle.c: include clockdrv_shell.h.

2008-09-30	Ralf Corsepius <ralf.corsepius@rtems.org>

	* clockdrv_shell.h: New (Copied from clockdrv_shell.c).

2008-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock_driver_simidle.c: New file.
	This implementation is for BSPs for simulators without a clock tick
	ISR.  It provides a special IDLE task that calls rtems_clock_tick()
	repeatedly when the application ends up in the IDLE task.  This